feat: finaliza v1 com seed oficial e melhorias de swagger